

You should keep two lines between each date.
TAG is optional. If your changes fix a bug listed in the Geant4 Bugzilla,
add this in the documentation for the changed file as [BUGFIX #BUGNUMBER].


     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *

     ----------------------------------------------------------

5th May 2015 - Ben Morgan (cmake-V10-00-40)
- Modules/Geant4ConfigureModulefile.cmake : Genarate a modulefile
  for the build tree. Requested by developers, but otherwise unsupported.
- Templates/geant4-modulefile.in : Update export variables to allow
  transparent configuration of build/install tree versions.

29th April 2015 - Ben Morgan
- Modules/Geant4MakeRules_cxx.cmake: Add `-no-gcc` to CMAKE_CXX_FLAGS
  when using Intel compiler. This is temporary fix to give
  matching flags against old GNUmake build. It requires further checks
  to understand full behaviour of this flag to tune code versus
  Intel's `-gcc-sys` flag and `__INTEL_COMPILER` macro.

22nd April 2015 - Ben Morgan
- Modules/FindCLHEP.cmake: Add CLHEP_ROOT_DIR to CMake cache, allowing
  it to be editted in the CMake curses/GUI. Use unset command to remove
  LIBRARY and INCLUDE_DIR variables for CLHEP from the cache when
  CLHEP_ROOT_DIR is changed.
- Templates/geant4-env-skeleton.in: Add expansion entry for CLHEP library
  path
- Modules/Geant4ToolchainBackwardCompatibility.cmake: Export setting
  of dynamic library path to prepend system CLHEP's library path in
  geant4.(c)sh

17th April 2015 - Ben Morgan
- Fixes for JIRA DEV-185 (Allow use of system CLHEP granular libraries)
- Modules/FindCLHEP.cmake: Allow component arguments to be supplied to
  find_package, each component being a CLHEP granular library. Support
  dependencies between components, and fail on REQUIRED if any requested
  component or dependency is not found. Set cache variables for each requested