@@ -367,18 +367,20 @@ endif()
 set(Geant4_qt_FOUND @GEANT4_USE_QT@)
 set(Geant4_USES_QT5 @Qt5Core_FOUND@)
 if(Geant4_qt_FOUND)
-  if(Geant4_FIND_REQUIRED_qt OR Geant4_FIND_REQUIRED_ui_all OR
-      Geant4_FIND_REQUIRED_vis_all)
+  # Must always refind Qt5 to recreate imported targets. Because these
+  # are in the public interface, always need linking.
+  if(Geant4_USES_QT5)
+    find_package(Qt5Core REQUIRED PATHS "@Qt5Core_DIR@")
+    find_package(Qt5Gui REQUIRED PATHS "@Qt5Gui_DIR@")
+    find_package(Qt5Widgets REQUIRED PATHS "@Qt5Widgets_DIR@")
+    find_package(Qt5OpenGL REQUIRED PATHS "@Qt5OpenGL_DIR@")
+    find_package(Qt5PrintSupport REQUIRED PATHS "@Qt5PrintSupport_DIR@")
+  endif()
+
+  if(Geant4_FIND_REQUIRED_qt OR Geant4_FIND_REQUIRED_ui_all OR Geant4_FIND_REQUIRED_vis_all)
     # If we have Qt5, we need to refind the components because they use
     # imported targets, so linking will not work unless we recreate
     # them
-    if(Geant4_USES_QT5)
-      find_package(Qt5Core REQUIRED PATHS "@Qt5Core_DIR@")
-      find_package(Qt5Gui REQUIRED PATHS "@Qt5Gui_DIR@")
-      find_package(Qt5Widgets REQUIRED PATHS "@Qt5Widgets_DIR@")
-      find_package(Qt5OpenGL REQUIRED PATHS "@Qt5OpenGL_DIR@")
-      find_package(Qt5PrintSupport REQUIRED PATHS "@Qt5PrintSupport_DIR@")
-    endif()
 
     list(APPEND
       Geant4_DEFINITIONS
